welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:27: error: not found: value yellow
  setCouleurBrosse(yellow)
                   ^