welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.code
def brosse(c:Color){
  setCouleurBrosse(c)
  baisseBrosse()
  for (i <- 0 to 1){
    avance()
  }
  leveBrosse()
}

def flower(c:Color){
  brosse(c)
  recule()
  gauche()
  recule()
  brosse(c)
  recule()
}







def growFlowers(){
  flower(Color.red)
  setCouleurBrosse(yellow)
  baisseBrosse()
  leveBrosse()
}